--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="weather_background">#D3B9FF</color>
+    <color name="weather_hot">#FFBCB7</color>
+    <color name="weather_cold">#A9D9FF</color>
 </resources>
