--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -11,10 +11,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:layout_constraintBottom_toTopOf="@id/rvWeather"
+        android:background="@drawable/searchview_outline"
+        app:layout_constraintBottom_toTopOf="@id/tvCity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_place_24"
+        app:layout_constraintBottom_toBottomOf="@id/tvCity"
+        app:layout_constraintEnd_toStartOf="@id/tvCity"
+        app:layout_constraintTop_toTopOf="@id/tvCity" />
+
+    <TextView
+        android:id="@+id/tvCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:fontFamily="@font/montserrat_light"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/svSearch"
+        tools:text="Kemerovo" />
+
+    <TextView
+        android:id="@+id/tvThisWeek"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="@string/week"
+        android:textSize="26sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCity" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvWeather"
@@ -23,6 +55,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/svSearch" />
+        app:layout_constraintTop_toBottomOf="@id/tvThisWeek" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
