new_ui: added some string values, changed item layouts

--- a/app/src/main/res/layout/item_weather_cold.xml
+++ b/app/src/main/res/layout/item_weather_cold.xml
@@ -63,13 +63,15 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="12dp"
-            tools:text="View >" />
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="@string/view"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
+            app:strokeColor="@color/white" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
