--- a/app/src/main/res/layout/item_weather_hot.xml
+++ b/app/src/main/res/layout/item_weather_hot.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     app:cardBackgroundColor="@color/weather_hot"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp"
@@ -19,12 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
             android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/white"
             android:textSize="48sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3"
             tools:text="20°" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -58,6 +59,22 @@
             app:layout_constraintTop_toBottomOf="@id/tvMain"
             tools:text="28.10.23" />
 
+        <TextView
+            android:id="@+id/tvDayOfWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@drawable/textview_background"
+            android:fontFamily="@font/montserrat_light"
+            android:paddingStart="18dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="18dp"
+            android:paddingBottom="2dp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Today" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btView"
             style="?attr/materialButtonOutlinedStyle"
@@ -72,7 +89,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTemperature"
             app:strokeColor="@color/white" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
