new_ui: added chart, color palette

--- a/app/src/main/res/layout/item_weather_cold.xml
+++ b/app/src/main/res/layout/item_weather_cold.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat_light"
             android:textSize="16sp"
+            android:textColor="@color/gray"
             app:layout_constraintBottom_toTopOf="@id/tvDateTime"
             app:layout_constraintStart_toStartOf="@id/guideline"
             app:layout_constraintTop_toTopOf="@id/tvTemperature"
@@ -54,6 +55,7 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/montserrat_light"
             android:textSize="12sp"
+            android:textColor="@color/gray"
             app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
             app:layout_constraintStart_toStartOf="@id/guideline"
             app:layout_constraintTop_toBottomOf="@id/tvMain"
