--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.details.DetailsFragment">
+    tools:context=".ui.details.DetailsFragment"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/tvCity"
@@ -14,21 +15,10 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat_light"
         android:textSize="32sp"
+        android:textColor="@color/text_white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Kemerovo" />
-
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/montserrat_light"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/tvCity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tvCity"
-        tools:text="21:30" />
 
     <ImageView
         android:id="@+id/line"
@@ -47,6 +37,7 @@
         android:layout_marginTop="6dp"
         android:fontFamily="@font/montserrat_light"
         android:textSize="18sp"
+        android:textColor="@color/text_white"
         app:layout_constraintStart_toStartOf="@id/line"
         app:layout_constraintTop_toBottomOf="@id/line"
         tools:text="Today" />
@@ -59,6 +50,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat_light"
         android:textSize="16sp"
+        android:textColor="@color/text_gray"
         app:layout_constraintStart_toEndOf="@id/tvToday"
         app:layout_constraintBottom_toBottomOf="@id/tvToday"
         tools:text="2023-10-28" />
@@ -71,6 +63,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat_medium"
         android:textSize="72sp"
+        android:textColor="@color/text_white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvToday"
         tools:text="10°" />
@@ -82,6 +75,7 @@
         android:layout_marginStart="12dp"
         android:fontFamily="@font/montserrat_light"
         android:textSize="24sp"
+        android:textColor="@color/text_white"
         app:layout_constraintBottom_toBottomOf="@id/tvTemperature"
         app:layout_constraintStart_toEndOf="@id/tvTemperature"
         app:layout_constraintTop_toTopOf="@id/tvTemperature"
@@ -105,6 +99,7 @@
         android:lineHeight="42dp"
         android:minLines="3"
         android:textSize="32sp"
+        android:textColor="@color/text_white"
         app:layout_constraintEnd_toEndOf="@id/guideline"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,6 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textColor="@color/text_white"
         android:fontFamily="@font/montserrat_light"
         app:layout_constraintEnd_toEndOf="@id/windChips"
         app:layout_constraintTop_toBottomOf="@id/windChips"
@@ -182,6 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_light"
+        android:textColor="@color/text_white"
         app:layout_constraintEnd_toEndOf="@id/pressureChip"
         app:layout_constraintTop_toBottomOf="@id/pressureChip"
         tools:text="1016 hPa" />
@@ -221,7 +218,8 @@
         android:fontFamily="@font/montserrat_light"
         app:layout_constraintEnd_toEndOf="@id/humidityChip"
         app:layout_constraintTop_toBottomOf="@id/humidityChip"
-        tools:text="30%" />
+        tools:text="30%"
+        android:textColor="@color/text_white"/>
 
     <ImageView
         android:id="@+id/lineUpOfRV"
@@ -235,14 +233,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDescription" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTimes"
-        android:layout_width="0dp"
+    <com.db.williamchart.view.LineChartView
+        android:id="@+id/lineChart"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:chart_labelsColor="@color/text_white"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
+        app:chart_labelsFont="@font/montserrat_light"
+        app:chart_labelsSize="12sp"
+        app:chart_axis="xy"
+        app:chart_gridEffect="dotted"
+        app:chart_lineColor="@color/text_white"
+        app:chart_lineThickness="3dp"
+        app:chart_smoothLine="true"
         app:layout_constraintBottom_toTopOf="@id/lineUnderRV"
-        app:layout_constraintEnd_toEndOf="@id/lineUpOfRV"
-        app:layout_constraintStart_toStartOf="@id/lineUpOfRV"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lineUpOfRV" />
 
     <ImageView
