--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="weather_background">#D3B9FF</color>
-    <color name="weather_hot">#FFBCB7</color>
-    <color name="weather_cold">#A9D9FF</color>
+    <color name="text_white">#DCDCDC</color>
+    <color name="weather_hot">#FF6d6d</color>
+    <color name="weather_cold">#8ad0ce</color>
+    <color name="gray">#5E5E5E</color>
+    <color name="background">#4b595e</color>
+    <color name="text_gray">#BABABA</color>
 </resources>
